test eggcellent links added

--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
   </head>
   <body>
     <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+      <img src="" class="card1-img-top" alt="egg-project" />
+      <div class="card1-body">
+        <h5 class="card1-title">Eggcellent Project</h5>
+        <p class="card1-text">
+          Adorable educational egg landing page. Interactive buttons to gauge
+          the users love of eggs.
         </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a
+          href="https://www.shecodes.io/workshops/shecodes-basics-00f05685-1a07-4d9f-a4e1-7b822eb75fcb/projects/522166"
+          class="btn btn-primary"
+          >Eggcellent Project</a
+        >
       </div>
     </div>
   </body>
