added img src path test

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="card" style="width: 18rem">
-      <img src="" class="card1-img-top" alt="egg-project" />
+      <img src="../images/eggcellent-project.png"></i>" class="card1-img-top" alt="egg-project" />
       <div class="card1-body">
         <h5 class="card1-title">Eggcellent Project</h5>
         <p class="card1-text">
