Change Title of page
Change title of page to " Projects"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
       crossorigin="anonymous"
     />
-    <title>Hello, world!</title>
+    <title>Projects</title>
   </head>
   <body>
     <div class="card" style="width: 18rem">
