--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  
+</head>
+
+<body>
+<div class="a">
+  <h1>Education</h1>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+    <h5>Generation USA</h5>
+    <br>
+    <h6>Junior Web Development</h6>
+    </div>
+    <div class="b">
+      <p>May 2022 - July 2022</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+    <h5>California Culinary Academy</h5>
+    <br>
+    <h6>Assosiate of Arts (A.A.)</h6>
+    </div>
+    <div class="b">
+      <p>Sept 2006 - Sept 2008</p>
+    </div>
+  </div>
+</div>
+
+
+
+  
+  
+  <script src="script.js"></script>
+</body>
+
+</html>
