--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
   </head>
   <body>
     <header><h1>Projects</h1></header>
-    <nav class="navbar navbar-dark bg-dark">
+    <ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+  </li>
+</ul>
       <!-- Navbar content -->
     </nav>
     <article id="projects-intro" class="container">
