--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <title>Projects</title>
+  </head>
+  <body>
+    <header><h1>Projects</h1></header>
+    <ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+  </li>
+</ul>
+
+      <!-- Navbar content -->
+    </nav>
+    <article id="projects-intro" class="container">
+      This is the head of the project maybe where the nav will be
+    </article>
+    <div class="card-deck">
+      <div class="card">
+        <img
+          src="eggcellent-project.png"
+          class="card-img-top card text-white bg-secondary"
+          alt="Egg landing page"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Eggcellent Info page</h5>
+          <p class="card-text">
+            Love eggs? Learn fun facts and more in this adorable informational
+            landing page about.... you guessed it EGGS!
+          </p>
+          <button type="button" class="btn btn-outline-primary">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-00f05685-1a07-4d9f-a4e1-7b822eb75fcb/projects/522166"
+              >Visit Eggcellent</a
+            >
+          </button>
+          <button type="button" class="btn btn-outline-success">
+            <a
+              href="https://github.com/JperryDev9/Shecodes.Final.Project/blob/main/Eggcellent.Project.html"
+              >Code in Github</a
+            >
+          </button>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          src="Treasure-island.png"
+          class="card-img-top card text-white bg-secondary"
+          alt="Treasure island game"
+        />
+        <div class="card-body">
+          <h5 class="card-title">
+            Treasure Island- Choose your own Adventure!
+          </h5>
+          <p class="card-text">
+            Treasure island theme choose your own adventure game. Players pick
+            what action to follow in this perilious adventure scenario.<br />
+            Basic python used to get players to either gold or their deaths.
+          </p>
+          <button type="button" class="btn btn-outline-primary">
+            <a href="https://replit.com/@idealyinfamous/Treasureisland?v=1"
+              >Play Game</a
+            >
+          </button>
+          <button type="button" class="btn btn-outline-success">
+            <a href="https://replit.com/@idealyinfamous">Code in Replit</a>
+          </button>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          src="https://media1.giphy.com/media/xTiN0IuPQxRqzxodZm/giphy.gif"
+          width="300"
+          height="300"
+          class="card-img-top card text-white bg-secondary"
+          alt="coming soon"
+        />
+        <div class="card-body">
+          <h5 class="card-title">More projects to come!</h5>
+          <p class="card-text">Open to any project ideas.</p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
 
