--- a/pages/projects.html
+++ b/pages/projects.html
@@ -42,7 +42,7 @@
     <div class="card-deck">
       <div class="card">
         <img
-          src="eggcellent-project.png"
+          src="../images/eggcellent-project.png"
           class="card-img-top card text-white bg-secondary"
           alt="Egg landing page"
         />
@@ -68,7 +68,7 @@
       </div>
       <div class="card">
         <img
-          src="Treasure-island.png"
+          src="../images/Treasure-island.png"
           class="card-img-top card text-white bg-secondary"
           alt="Treasure island game"
         />
