--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,16 +21,13 @@
     <header><h1>Projects</h1></header>
     <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
+    <a class="nav-link active" href="../index.html">Main</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="../pages/Professional">Professional</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    <a class="nav-link" href="../pages/education">Education</a>
   </li>
 </ul>
 
