--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="card-deck">
       <div class="card">
         <img
-          src="https://dynamic.brandcrowd.com/asset/logo/fe7e162d-9805-41f6-bca1-9b064d3f9765/insta-square?v=4&s=c84Yw6LNNQD2vhyg3mdv1fbAc7RUuRS4QR2NkDcDKgk%3d"
+          src="Portfolio_JWD/Images/EGG_J.png"
           
           class="card-img-top card text-white bg-secondary"
           alt="Egg landing page"
