--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="images/logo.jpeg" class="ml-3" alt="" height="420px">
   </div>
 
-  <li class="list-group-item">
+  <li class="list-group-item"  id="tasksList">
     <div class="d-flex w-100 mt-2 justify-content-between align-items-center">
         <h5>Take out trash</h5>
         <span class="badge badge-danger">TODO</span>
